# tidy-data-mds-espanol

./: 1_encabezados_columnas_son_valores.ipynb  2_multiples_variables_almacenadas_en_una_columna.ipynb  3_variables_almacenadas_tanto_en_filas_y_en_columnas.ipynb  4_multiples_tipos_de_observaciones_en_una_tabla.ipynb  5_un_tipo_de_obs_en_multiples_tablas.ipynb  6_estudio_de_caso.ipynb  conda_environment.yaml  environment.yaml  pyproject.toml  shell
