[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry]
name = "tidy-data"
version = "0.1.0"

authors = ["Alexander Hess <alexander@webartifex.biz>"]
description = "A Python implementation for Hadley Wickham's Tidy Data paper"
keywords = [
    "data-cleaning",
    "data-science",
    "messy-data",
    "python",
    "tidy-data",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

# Data Science Tools
jupyterlab = "3.3.2"
jupyter = "1.0.0"
notebook = "6.4.8"
matplotlib = "3.5.1"
numpy = "1.21.5"
pandas = "1.4.2"
seaborn = "0.11.2"
scikit-learn = "1.0.2"

# Interfaces to other tools
rpy2 = "==3.5.1"  # R support
#savreaderwriter = "^3.4.2"  # IBM SPSS support

[tool.poetry2conda]
name = "tidy-data-env-conda"

[tool.poetry2conda.dependencies]
jupyterlab = { channel = "conda-forge" }
matplotlib = { channel = "conda-forge" }
numpy= { channel = "conda-forge" }
seaborn= { channel = "conda-forge" }
pandas= { channel = "conda-forge" }
rpy2= { channel = "conda-forge" }
#savreaderwriter= { channel = "gusdunn" }
scikit-learn= { channel = "conda-forge" }